implemented-product-service-using-CQRS-pattern